--- a/themes/pelican-JuPyR/templates/base.html
+++ b/themes/pelican-JuPyR/templates/base.html
@@ -3,4 +3,5 @@
 {% block head %}
 {{ super() }}
        <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
+       <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/ipy_notebook.css" />
 {% endblock %}
